feat: Added animation to the button

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="page-wrapper">
 
         <div class="header">
-            <p>🤬 Word Filter</p>
+            <p>W*rd Filter</p>
         </div>
         <div class="content">
             <form class="word-filter-form" action="post">
@@ -29,6 +29,7 @@
             </form>
         </div>
         <div class="footer">
+            <p>Created by Saigunas</p>
         </div>
 
     </div>
