--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
         <div class="header">
             <p>W*rd Filter</p>
         </div>
+
         <div class="content">
+            
             <form class="word-filter-form" action="post">
                 <select name="replace-with" id="replace-with">
                     <option>****</option>
@@ -27,8 +29,27 @@
                     <p>🤬</p>
                 </button>
             </form>
-            <div class="output-text"></div>
+
+                <div class="output-text"></div>
+                <div class="extra-info disabled">
+                    <ul class="returned-data">
+                        <li>
+                            <p>Number of words:</p>
+                            <div class="number-of-words"></div>
+                        </li>
+                        <li>
+                            <p>Number of sentences</p>
+                            <div class="number-of-sentences"></div>
+                        </li>
+                        <li>
+                            <p>Top 5 most frequent words</p>
+                            <div class="top-5-words"></div>
+                        </li>
+                    </ul>
+                </div>
+
         </div>
+
         <div class="footer">
             <p>Created by Saigunas</p>
         </div>
