feat: customized css of extra info provided by api

--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
                             <div class="number-of-words"></div>
                         </li>
                         <li>
-                            <p>Number of sentences</p>
+                            <p>Number of sentences:</p>
                             <div class="number-of-sentences"></div>
                         </li>
-                        <li>
-                            <p>Top 5 most frequent words</p>
+                        <li class="top-5-words-container">
+                            <p>Top 5 most frequent words:</p>
                             <div class="top-5-words"></div>
                         </li>
                     </ul>
